--- a/dicee.html
+++ b/dicee.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Dice Game</title>
+    <link rel="icon" type="image/x-icon" href="./images/dice6.png" />
     <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster"
